app/assets/stylesheets/styles.scss
#error-summary-display:focus {
    outline: 3px solid #ffbf47;
}

.margin-top-30 {
    margin-top: 30px !important;
}

.margin-top-20 {
    margin-top: 20px !important;
}

.margin-top-10 {
    margin-top: 10px !important;
}

.margin-top-0 {
    margin-top: 0px !important;
}

.margin-bottom-30 {
    margin-bottom: 30px !important;
}

.margin-bottom-20 {
    margin-bottom: 20px !important;
}

.margin-bottom-10 {
    margin-bottom: 10px !important;
}

.margin-bottom-0 {
    margin-bottom: 0px !important;
}

.button-block {
    display: block;
    clear: both;
}

.js-enabled .autocomplete-wrapper select{
 visibility: hidden;
}

.js-enabled #amlsForm{
 visibility: hidden;
}

.app-check-your-answers {
    font-family: "nta", Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.25;
}

.report-error .report-error__toggle {
    color: #005ea5;
}

.report-error {
    margin: 0;
}

.panels-conditionals .panel {
    margin-left: 15px;
    border-left-width: 10px;
    padding-left: 32px;
    padding-top: 3px;
}

.report-error .report-error__toggle {
    color: #005ea5;
}

.report-error {
    margin: 0;
}

.panels-conditionals .panel {
    margin-left: 15px;
    border-left-width: 10px;
    padding-left: 32px;
    padding-top: 0;
}

@media print {
    .app-check-your-answers {
        font-family: sans-serif;
    }
}

@media (min-width: 40.0625em) {
    .app-check-your-answers {
        font-size: 19px;
        /*line-height: 1.31579;*/
    }
}

@media print {
    .app-check-your-answers {
        font-size: 14pt;
        line-height: 1.15;
    }
}

@media (min-width: 48.0625em) {
    .app-check-your-answers {
        display: table;
    }
}

@media (min-width: 48.0625em) {
    .app-check-your-answers--short {
        width: 100%;
    }

    .app-check-your-answers--short .app-check-your-answers__question {
        width: 30%;
    }
}

@media (min-width: 48.0625em) {
    .app-check-your-answers--long {
        width: 100%;
    }

    .app-check-your-answers--long .app-check-your-answers__question {
        width: 50%;
    }
}

.app-check-your-answers__contents {
    position: relative;
}

@media (min-width: 48.0625em) {
    .app-check-your-answers__contents {
        display: table-row;
    }
}

.app-check-your-answers__question,
.app-check-your-answers__answer,
.app-check-your-answers__change {
    display: block;
    margin: 0;
}

@media (min-width: 48.0625em) {
    .app-check-your-answers__question,
    .app-check-your-answers__answer,
    .app-check-your-answers__change {
        display: table-cell;
        padding: 0;
    }
}

.app-check-your-answers__question {
    font-weight: bold;
    margin: 0.63158em 1em 0.21053em 0
}

.app-check-your-answers__answer {
    /*padding-bottom: 0.47368em;*/
    padding-bottom: 0.3em;
    word-break: break-all;
}

.app-check-your-answers--group {
    border-bottom: 1px solid #bfc1c3;
    padding-bottom: 5px;
}

@media (min-width: 48.0625em) {
    .app-check-your-answers__change {
        text-align: right;
        padding-right: 0;
    }
}

/* form overrides */

.flash.error-summary {
    border: 5px solid #d4351c;
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 20px 15px 15px;
}

.flash.error-summary a {
    font-weight: bold;
}

#error-summary-heading {
    font-size: 24px;
}

.form-field--error .error-notification {
    font-weight: bold;
    font-size: 19px;
    line-height: 1.31579;
}

.error,
.form-field--error {
    border-left: 5px solid #d4351c;
    padding-left: 15px;
    margin-right: 15px;
}

.form-field--error input[type="text"] {
    border: 4px solid #d4351c;
}

.form-field--error .form-date .form-field--error {
    border-left: none;
    padding: inherit;
}

.form-field--error legend .heading-large {
    margin-top: 0px !important;
}

.form-group-error {
    padding-top: 0;
    padding-bottom: 0;
}

.form-field--error{
    .multiple-choice{
        [type=checkbox]+label.form-field-single{
            &::before{
                top: 65px;
            }
            &::after{
                top: 75px;
            }
        }
    }
    .form-field-single{
        .error-notification{
            margin-left: -2.1em;
        }
    }
}

/* no js style for dates */
.no-js .form-date .form-field--error {
    border-left: none;
    padding: inherit;
    -webkit-box-sizing: inherit;
    box-sizing: inherit;
    padding: inherit;
}

.no-js .nojs-date-fields-error .form-group.soft--ends {
    border-left: 3px solid #df3034;
    padding: 0.75em 1em;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    padding: .63158em .84211em .63158em .84211em;
}

.no-js .nojs-date-fields-error .error-notification {
    position: absolute;
    overflow: hidden;
    clip: rect(0 0 0 0);
    height: 1px;
    width: 1px;
    margin: -1px;
    padding: 0;
    border: 0;
}

.autocomplete__wrapper {
    position: relative
}

.autocomplete__hint, .autocomplete__input {
    -webkit-appearance: none;
    border: 2px solid;
    border-radius: 0;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    margin-bottom: 0;
    width: 100%
}

.autocomplete__input {
    background-color: transparent;
    position: relative
}

.autocomplete__hint {
    color: #bfc1c3;
    position: absolute
}

.autocomplete__input--default {
    padding: 4px
}

.autocomplete__input--focused {
    outline-offset: 0;
    outline: 3px solid #ffbf47
}

.autocomplete__input--show-all-values {
    padding: 4px 34px 4px 4px;
    cursor: pointer
}

.autocomplete__dropdown-arrow-down {
    z-index: -1;
    display: inline-block;
    position: absolute;
    right: 8px;
    width: 24px;
    height: 24px;
    top: 10px
}

.autocomplete__menu {
    background-color: #fff;
    border: 2px solid #0b0c0c;
    border-top: 0;
    color: #34384b;
    margin: 0;
    max-height: 342px;
    overflow-x: hidden;
    padding: 0;
    width: 100%;
    width: calc(100% - 4px)
}

.autocomplete__menu--visible {
    display: block
}

.autocomplete__menu--hidden {
    display: none
}

.autocomplete__menu--overlay {
    box-shadow: rgba(0, 0, 0, .256863) 0 2px 6px;
    left: 0;
    position: absolute;
    top: 100%;
    z-index: 100
}

.autocomplete__menu--inline {
    position: relative
}

.autocomplete__option {
    border-bottom: solid #bfc1c3;
    border-width: 1px 0;
    cursor: pointer;
    display: block;
    position: relative
}

.autocomplete__option > * {
    pointer-events: none
}

.autocomplete__option:first-of-type {
    border-top-width: 0
}

.autocomplete__option:last-of-type {
    border-bottom-width: 0
}

.autocomplete__option--odd {
    background-color: #fafafa
}

.autocomplete__option--focused, .autocomplete__option:hover {
    background-color: #005ea5;
    border-color: #005ea5;
    color: #fff;
    outline: 0
}

.autocomplete__option--no-results {
    background-color: #fafafa;
    color: #646b6f;
    cursor: not-allowed
}

.autocomplete__hint, .autocomplete__input, .autocomplete__option {
    font-size: 16px;
    line-height: 1.25
}

.autocomplete__hint, .autocomplete__option {
    padding: 4px
}

@media (min-width: 641px) {
    .autocomplete__hint, .autocomplete__input, .autocomplete__option {
        font-size: 19px;
        line-height: 1.31579
    }
}

input[type="text"].autocomplete__input {
    width: 100%
}

.autocomplete-wrapper {
    width: 100%
}

@media (min-width: 48.0625em) {
    .autocomplete-wrapper {
        width: 50%
    }
}

/* arrow element not needed from polyfill in IE */
.no-details details summary .arrow-closed {
    display: none;
}

@media (min-width: 641px) {
    .content__body {
        float: left;
        width: 66.666667%;
    }
}

.govuk-c-loader {
    text-align: center;
    position: relative;
    line-height: 0;
}

.govuk-c-loader:focus {
    outline: 3px solid #ffbf47;
}

.govuk-c-loader__spinner {
    z-index: 2000000000;
}

.govuk-c-loader__label {
    font-family: "ntatabularnumbers", "nta", Arial, sans-serif;
    font-weight: 400;
    text-transform: none;
    font-size: 16px;
    display: block;
    line-height: 1em;
    margin-top: -.5em;
    padding-bottom: 1.5em;
}

.loader {
    display: none;
}

details .panel[aria-hidden=true] a {
    display: none; /* Accessibility requirement - Aria hidden elements do not contain focusable elements */
}


@media (min-width: 641px) {
    .govuk-c-loader__label {
        font-size: 19px;
        line-height: 1.31579;
    }
}

.error-summary {
    display: none;
}

.error-notification{
    display: none;
}

.error-summary.error-summary--show {
    display: block;
}

.error-notification.error-notification--show{
    display: block;
}

#file-upload-container {
    padding-top: 0;
    padding-bottom: 0;
}

#file-upload-container.form-field--error input[type=file] {
    border: 4px solid #d4351c;
}



// =========================
// focus states
// changes made to bring in line with
// https://designnotes.blog.gov.uk/2019/07/29/weve-made-the-gov-uk-design-system-more-accessible/
// =========================

@import 'partials/_focus';
@import 'partials/_palette';

